Fix wrong margin

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,7 +57,7 @@ h3.daftar {
 }
 
 .faskes {
-	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 .no-antri {
